@@ -1,5 +1,6 @@
 0.04
  - Add query process for lexeme (statements).
+ - Add tests for lexeme statement queries.
  - Update copyright years.
 
 0.03 2023-10-30T11:58:55+01:00
